--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(cpp-advanced-hse)
-
-option(ENABLE_SEMINARS OFF)
+project(JPEG-Decoder)
 
 set(CMAKE_MODULE_PATH              "${CMAKE_SOURCE_DIR}/cmake")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
